crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_expand_varlen_unbounded.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n, $2 AS m]
  Expand ($0)-[:KNOWS*..(->) $1]->( AS $2)
    Source (AS $0)
