crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_expr_all_literals.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [null AS nul, false AS flag, 42 AS num, 2.71 AS flt, "hello" AS str, [1, 2, 3] AS lst, {key: "value", n: 99} AS mp]
  Source (AS $0)
