crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_expr_not_and_unary_neg.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n]
  Filter ((NOT($0.deleted) AND (-($0.score) > -(100))))
    Source (AS $0)
